z-index fix on z-window indicator
It was shown down of z-tabs because each tab has a z.index 2000 by default

--- a/src/style/core.css
+++ b/src/style/core.css
@@ -1514,6 +1514,7 @@ button.z-imagebutton, /* Buttons in inline 'ajax' forms */
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 9999;
 }
 
 .z-alert .z-window-header {
